--- a/Maquetacion_basica/paginaGalery.html
+++ b/Maquetacion_basica/paginaGalery.html
@@ -18,7 +18,7 @@
 
             </div>
             <div class="text">
-                <a href="" class="blog">Blog</a>
+                <a href="./blog.html" class="blog">Blog</a>
             </div>
 
         </nav>
