--- a/Bootstrap_JQuery/reto2.html
+++ b/Bootstrap_JQuery/reto2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <link rel="stylesheet" href="reto2.js">
   </head>
   <body >
@@ -37,12 +37,33 @@
               </li>
             </ul>
             
-            <button id="carrito" class="btn btn-light" >CARRITO</button>
-
+            <!-- Button trigger modal -->
+            <button type="button" id="carritoBT" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#listaCompra">
+              CARRITO
+            </button>
           </div>
         </div>
       </nav>
-      <div id="carrito-contenido" style="display: none;"></div>
+
+<!-- Modal -->
+<div class="modal fade" id="listaCompra" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body" id="total">
+        
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
       <!-- CONTAINER -->
     <div class="container ">
@@ -57,7 +78,7 @@
               <h5 class="card-title">Pantalón suelto gris</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <p class="precio"> 20€</p>
-              <button id="pantalonGris" class="btn btn-dark">Añadir al carrito</button>
+              <button id="pantalonGris" type="button" class="btn btn-dark">Añadir al carrito</button>
             </div>
           </div>
         </div>
@@ -70,7 +91,7 @@
               <h5 class="card-title">Vestido Túnico</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               <p class="precio"> 18€</p>
-              <button id="vestidoTunico" class="btn btn-dark">Añadir al carrito</button>
+              <button id="vestidoTunico" type="button" class="btn btn-dark">Añadir al carrito</button>
             </div>
           </div>
         </div>
@@ -161,7 +182,7 @@
       </div>
     </div>
 
-      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+      <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     </body>
   </html>
